--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ window.location.href = "http://www.embulk.org/docs/"
     <title>Embulk | plugin-based parallel bulk data loader</title>
   </head>
   <body>
-    Top page is not ready yet. Redirecting to <a href="http://www.embulk.org/docs/">http://www.embulk.org/docs/</a>
+    Top page is not ready yet. Redirecting to <a href="http://www.embulk.org/docs/">http://www.embulk.org/docs/</a>.
   </body>
 </html>
