--- a/plugins/index.html
+++ b/plugins/index.html
@@ -1863,7 +1863,7 @@
                         <span class="gh-ico"></span>
                         <span class="gh-text">Star</span>
                       </a>
-                      <a class="gh-count" href="https://github.com/toyama0919/embulk-parser-ltsv/stargazers" target="_blank" style="display: block">0</a>
+                      <a class="gh-count" href="https://github.com/toyama0919/embulk-parser-ltsv/stargazers" target="_blank" style="display: block">-</a>
                     </span>
                   </div>
                 </td>
@@ -1874,8 +1874,7 @@
                 </td>
                 <td style="min-width:13em">
                   
-                  <a href="https://github.com/toyama0919">toyama0919
-                  <img src="https://avatars.githubusercontent.com/u/734403?v=3" height=32 width=32></img></a>
+                  toyama0919
                   
                 </td>
                 <td>Parses Ltsv files read by other file input plugins.</td>
