--- a/plugins/index.html
+++ b/plugins/index.html
@@ -2042,7 +2042,7 @@
                         <span class="gh-ico"></span>
                         <span class="gh-text">Star</span>
                       </a>
-                      <a class="gh-count" href="https://github.com/embulk/embulk-executor-mapreduce/stargazers" target="_blank" style="display: block">-</a>
+                      <a class="gh-count" href="https://github.com/embulk/embulk-executor-mapreduce/stargazers" target="_blank" style="display: block">4</a>
                     </span>
                   </div>
                 </td>
@@ -2053,7 +2053,8 @@
                 </td>
                 <td style="min-width:13em">
                   
-                  Sadayuki Furuhashi
+                  <a href="https://github.com/embulk">Sadayuki Furuhashi
+                  <img src="https://avatars.githubusercontent.com/u/10171516?v=3" height=32 width=32></img></a>
                   
                 </td>
                 <td>Executes tasks on Hadoop.</td>
