--- a/plugins/index.html
+++ b/plugins/index.html
@@ -2005,7 +2005,7 @@
                         <span class="gh-ico"></span>
                         <span class="gh-text">Star</span>
                       </a>
-                      <a class="gh-count" href="https://github.com/takei-yuya/embulk-formatter-jsonl/stargazers" target="_blank" style="display: block">0</a>
+                      <a class="gh-count" href="https://github.com/takei-yuya/embulk-formatter-jsonl/stargazers" target="_blank" style="display: block">-</a>
                     </span>
                   </div>
                 </td>
@@ -2016,8 +2016,7 @@
                 </td>
                 <td style="min-width:13em">
                   
-                  <a href="https://github.com/takei-yuya">TAKEI Yuya
-                  <img src="https://avatars.githubusercontent.com/u/853320?v=3" height=32 width=32></img></a>
+                  TAKEI Yuya
                   
                 </td>
                 <td>Formats Embulk Formatter Jsonl files for other file output plugins.</td>
