--- a/plugins/index.html
+++ b/plugins/index.html
@@ -1914,7 +1914,7 @@
                         <span class="gh-ico"></span>
                         <span class="gh-text">Star</span>
                       </a>
-                      <a class="gh-count" href="https://github.com/hito4t/embulk-parser-jdbc-schema-csv/stargazers" target="_blank" style="display: block">0</a>
+                      <a class="gh-count" href="https://github.com/hito4t/embulk-parser-jdbc-schema-csv/stargazers" target="_blank" style="display: block">-</a>
                     </span>
                   </div>
                 </td>
@@ -1925,8 +1925,7 @@
                 </td>
                 <td style="min-width:13em">
                   
-                  <a href="https://github.com/hito4t">Hitoshi Tanaka
-                  <img src="https://avatars.githubusercontent.com/u/9376466?v=3" height=32 width=32></img></a>
+                  Hitoshi Tanaka
                   
                 </td>
                 <td>This Embulk plugin extends CSV parser to define columns based on database meta data.</td>
