--- a/plugins/index.html
+++ b/plugins/index.html
@@ -1260,7 +1260,7 @@
                         <span class="gh-ico"></span>
                         <span class="gh-text">Star</span>
                       </a>
-                      <a class="gh-count" href="https://github.com/hakobera/embulk-output-gcs/stargazers" target="_blank" style="display: block">-</a>
+                      <a class="gh-count" href="https://github.com/hakobera/embulk-output-gcs/stargazers" target="_blank" style="display: block">2</a>
                     </span>
                   </div>
                 </td>
@@ -1271,7 +1271,8 @@
                 </td>
                 <td style="min-width:13em">
                   
-                  Kazuyuki Honda
+                  <a href="https://github.com/hakobera">Kazuyuki Honda
+                  <img src="https://avatars.githubusercontent.com/u/346598?v=3" height=32 width=32></img></a>
                   
                 </td>
                 <td>&quot;Dumps records to Google Cloud Storage.&quot;</td>
